--- a/1. Page Structure/01_04/Start/index.html
+++ b/1. Page Structure/01_04/Start/index.html
@@ -6,6 +6,12 @@
 	<link href="styles.css" rel="stylesheet" type="text/css">
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<style>
+		.div2 {
+			position: relative;
+			left: 100px;
+			top: 100px;
+			z-index: -12;
+		}
 
 
 
