--- a/1. Page Structure/01_05/Start/index.html
+++ b/1. Page Structure/01_05/Start/index.html
@@ -6,6 +6,17 @@
 	<link href="styles.css" rel="stylesheet" type="text/css">
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<style>
+		.photo {
+			float:right;
+			margin-left: 30px;
+		}
+
+		.p2 {
+			/* clear: both; */
+		}
+		.p5 {
+			clear: both;
+		}
 
 
 
