--- a/1. Page Structure/01_06/Start/index.html
+++ b/1. Page Structure/01_06/Start/index.html
@@ -6,12 +6,22 @@
 	<link href="styles.css" rel="stylesheet" type="text/css">
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<style>
+		div {
+			width: 60%;
+		}
+		p{
+			width: 50vmin;
+			height: 50vmin;
+		}
 
 
 
 	</style>
 </head>
 <body>
-	<div></div>
+	<div><p>Hello It is me</p></div>
 </body>
 </html>
+
+<!--vmax allow you to enlarge the element size by changing window size, when go to largest window, its 50% of viewport-->
+<!--vmin allow you to make it smaller, but even when you make smallest possible windows, the element is 50% of viweport-->
