--- a/2. Responsive Layout/02_02/Start/index.html
+++ b/2. Responsive Layout/02_02/Start/index.html
@@ -4,6 +4,7 @@
 	<title>02_02 Exercise - Start</title>
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1" name="viewport">
+	<link href="./styles.css" rel="stylesheet">
 	<style>
 
 
