--- a/3. CSS Grid/03_02/Start/index.html
+++ b/3. CSS Grid/03_02/Start/index.html
@@ -6,6 +6,16 @@
 	<link href="styles.css" rel="stylesheet" type="text/css">
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<style>
+		.container {
+			display: grid;
+			grid-template-columns: repeat(3, auto);
+			grid-auto-rows: 200px 50px 100px;
+			grid-row-gap: 10px;
+			grid-column-gap: 5px;
+		}
+		.item {
+			/* margin:10px; */
+		}
 
 
 
